[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
futures-util = "0.3.21"
