[package]
name = "num"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "sync", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
futures-util = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
log = "0.4.16"
env_logger = "0.9.0"
